# ytsubs

./: .gitignore  README.md  pyproject.toml
src/ytsubs/: __init__.py  api.py  app.py  auth.py  download.py  nfo.py  support.py
tests/: test_api.py  test_auth.py  test_support.py  test_ytsubs.py
