[tool.poetry]
name = "ytsubs"
version = "0.1.8"
description = ""
authors = ["ccdale <chris.charles.allison+ytsubs@gmail.com>"]
readme = "README.md"
packages = [{include = "ytsubs", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
google-api-python-client = "^2.65.0"
google-auth-oauthlib = "^0.7.1"
google-auth-httplib2 = "^0.1.0"
oauth2client = "^4.1.3"
ccalogging = "^0.4.4"
pytube = "^12.1.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[tool.poetry.scripts]
getvids = "ytsubs.app:getVids"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
